--- a/index.html
+++ b/index.html
@@ -1398,6 +1398,20 @@ RANK Last, First
 <br>Dates: 20 DEC 2021 - 04 JAN 2022
 <br>Airport: TUS (Tucson International Airport)
 <br>
+<br>Once you buy your tickets, send your itinerary to the SHC Gmail.
+<br>
+<br>In the body of the same email include your leave:
+<br>-dates (start and end)
+<br>-address
+<br>-phone number
+<br>
+<br>If there's a change to your itinerary,
+<br>go to your sent mail, and reply to the same email.
+<br>
+<br>And don't forget to update Huachuca Shuttle.
+<br>
+<br><label>SHC Gmail: </label><a href="mailto:shc111th@gmail.com?subject=HBL%20Itinerary" target="_blank">shc111th@gmail.com</a>
+<br>
 <br>
 <br>
 <br>Track flights prices:
@@ -1420,7 +1434,7 @@ RANK Last, First
 <br>
 <br>Bus tickets can be bought at:
 <br><a href="https://huachucashuttle.com" target="_blank">https://huachucashuttle.com</a>
-<br>Should be about $35 per trip
+<br>-Should be about $35 per trip
 <br><br>
 <br>Call to report changes to your itinerary.
 <br><a href="tel:520-439-0439">520-439-0439</a><label> - Huachuca Shuttle</label>
