--- a/index.html
+++ b/index.html
@@ -3402,7 +3402,7 @@ function toTitleCase(str){
   }
   
   // Certain words such as initialisms or acronyms should be left uppercase
-  uppers = ['Id', 'Tv', 'USA', 'Ii', 'Iii', 'Iv', 'Vi', 'Vii', 'Viii', 'Ix', 'Xi', 'Xii', 'Xiii', 'Ne', 'Nw', 'Se', 'Sw'];
+  uppers = ['Id', 'Tv', 'Usa', 'Ii', 'Iii', 'Iv', 'Vi', 'Vii', 'Viii', 'Ix', 'Xi', 'Xii', 'Xiii', 'Ne', 'Nw', 'Se', 'Sw'];
   for (i = 0, j = uppers.length; i < j; i++) {
     str = str.replace(new RegExp('\\b' + uppers[i] + '\\b', 'g'), 
       function(txt) {return txt.toUpperCase();}
