--- a/index.html
+++ b/index.html
@@ -1426,6 +1426,12 @@ RANK Last, First
 <br>
 <br><a href="https://myarmyonesource.com" target="_blank">https://myarmyonesource.com</a>
 
+<br><br>
+<br><a href="https://armypubs.army.mil" target="_blank">https://armypubs.army.mil</a> - Army Publications
+<br>
+<br>-Start filling the forms below, keep them for your records, and when you have enough hours talk with your DS/Supervisor to submit you for MOVSM.
+<br>-<a href="https://armypubs.army.mil/ProductMaps/PubForm/Details.aspx?PUB_ID=37223" target="_blank">DA4713 - Volunteer Daily Time Record</a>
+<br>-<a href="https://armypubs.army.mil/ProductMaps/PubForm/Details.aspx?PUB_ID=3059" target="_blank">DA4162 - Volunteer Service Record</a>
 
 <br>
 </details></fieldset><!-- Volunteer -->
