--- a/index.html
+++ b/index.html
@@ -2982,6 +2982,8 @@ function jsonFileDownload() {
   fileDownload(data, file, 'text/json;charset=utf-8;');
 }
 
+//make function dateFormat(dateSent = new Date() sep = "-", arg1)
+
 function dateChange(){
   var comp = document.getElementById("smComponent").value.toString().trim().toLowerCase();
   var dor = document.getElementById("smDateDOR").value.toString().trim();
