--- a/index.html
+++ b/index.html
@@ -1219,7 +1219,7 @@ border: solid 2px;
 
 <br><a href="tel:520-533-0906">520-533-0906</a><label> - Co CQ Phone</label>
 <br>
-<br><label>Co Email: </label><a href="mailto:usarmy.huachuca.icoe.list.111th-hold-co-drill-sergeants@mail.mil" target="_blank">usarmy.huachuca.icoe.list.111th-hold-co-drill-sergeants@mail.mil</a>
+<br><label>Co Email: </label><a href="mailto:usarmy.huachuca.icoe.list.111th-hold-co-drill-sergeants@army.mil" target="_blank">usarmy.huachuca.icoe.list.111th-hold-co-drill-sergeants@army.mil</a>
 <br>
 <br><label>Co Gmail: </label><a href="mailto:shc111th@gmail.com" target="_blank">shc111th@gmail.com</a>
 <br>
@@ -1528,7 +1528,7 @@ RANK Last, First
 <br><label>Co Email: </label><a href="mailto:charlie309th@gmail.com">charlie309th@gmail.com</a>
 <br><a href="https://www.facebook.com/ComancheCompany309th" target="_blank">C Co, 309th Facebook page</a>
 <br>
-<br><a href="https://drive.google.com/file/d/1w2tOjSq-ifaubtxphW2Y-TXNfpfcR6o6/view?usp=sharing">35T OML - Class start roster</a>
+<br><a hidden href="https://drive.google.com/file/d/1w2tOjSq-ifaubtxphW2Y-TXNfpfcR6o6/view?usp=sharing">35T OML - Class start roster</a>
 <br>
 <br>309th BN Moto: Sentinels of Security
 <br>309th BN Response: Sentinel Pride!
@@ -1753,11 +1753,11 @@ RANK Last, First
 <br><br>111th MI BDE SARC - SFC Pennington, Saquawia V.
 <br><a href="tel:520-533-4448">520-533-4448</a><label> - Office</label>
 <br><a href="tel:520-220-6380">520-220-6380</a><label> - Duty Cell</label>
-  <br><a href="mailto:saquawia.v.pennington.mil@mail.mil">saquawia.v.pennington.mil@mail.mil</a>
+  <br><a href="mailto:saquawia.v.pennington.mil@army.mil">saquawia.v.pennington.mil@army.mil</a>
 <br><br>111th MI BDE VA - SFC Feige, Anthony B.
 <br><a href="tel:520-533-4448">520-533-4448</a><label> - Office</label>
 <br><a href="tel:520-732-3760">520-732-3760</a><label> - Duty Cell</label>
-<br><a href="mailto:anthony.b.feige.mil@mail.mil">anthony.b.feige.mil@mail.mil</a>
+<br><a href="mailto:anthony.b.feige.mil@army.mil">anthony.b.feige.mil@army.mil</a>
 <br>
 <br><a href="https://www.instagram.com/rapid_bde" target="_blank">https://www.instagram.com/rapid_bde</a>
 <br>
@@ -2256,7 +2256,7 @@ RANK Last, First
 <br><br>
 <footer>
   <p>Created by: HernandezGarcia, Jorge
-  <br><a href="mailto:jorge.hernandezgarcia.mil@mail.mil">jorge.hernandezgarcia.mil@mail.mil</a>
+  <br><a href="mailto:jorge.hernandezgarcia.mil@army.mil">jorge.hernandezgarcia.mil@army.mil</a>
   <br><br><label>Source code: </label><a href="https://github.com/jorgepr13/hold-co" target="_blank">https://github.com/jorgepr13/hold-co</a>
   </p>
 </footer>
@@ -2269,7 +2269,7 @@ function emailSend() {
     var subject = "In-Processing Data Sheet";
     var body = "DS,\r\n\r\nAttached is my personal datasheet.\r\n\r\nVery respectfully,\r\n" + document.getElementById("smRank").value + " " + document.getElementById("smNameLast").value;
     //body += "<" + window.location.href + ">";
-    //var uri = "mailto:usarmy.huachuca.icoe.list.111th-hold-co-drill-sergeants@mail.mil?subject=";
+    //var uri = "mailto:usarmy.huachuca.icoe.list.111th-hold-co-drill-sergeants@army.mil?subject=";
     var uri = "mailto:shc111th@gmail.com?subject=";
     uri += encodeURIComponent(subject);
     uri += "&body=";
@@ -2524,6 +2524,42 @@ function csvGenerateStudent(data, header = false, sepField = ",", sepRow = "\r\n
   
   //var val = j.sm.toLowerCase();
   //if (val == undefined || val == null || val == "" || val == "none" || val == "na" || val == "n/a") {j.sm = "";}
+  
+  //dateFormat(val)
+  /*
+  var comp = document.getElementById("smComponent").value.toString().trim().toLowerCase();
+  var dor = document.getElementById("smDateDOR").value.toString().trim();
+  var basd = document.getElementById("smDateBASD").value.toString().trim();
+  var pebd = document.getElementById("smDatePEBD").value.toString().trim();
+  var ets = document.getElementById("smDateETS").value.toString().trim();
+  var wks = parseInt(document.getElementById("smDateETSwks").value);
+  var yrs = parseInt(document.getElementById("smDateETSyrs").value);
+  if (wks == undefined || wks == null || wks == "" || isNaN(wks)) {wks = 0;}
+  if (yrs == undefined || yrs == null || yrs == "" || isNaN(yrs)) {yrs = 0;}
+  
+  //alert("Comp: " + comp + "\nDoR: " + dor + "\nBASD: " + basd + "\nPEBD: " + pebd + "\nETS: " + ets + "\nWeeks: " + wks + "\nYears: " + yrs);
+  
+  if (dor == "" && basd != "" && comp == "active") {dor = basd;}
+  
+  if (basd == "" && dor != "" && comp == "active") {basd = dor;}
+  if (pebd == "" && dor != "") {pebd = dor;}
+  
+  if (dor == "" && pebd != "") {dor = pebd;}
+  if (basd == "" && pebd != "" && comp == "active") {basd = pebd;}
+  
+  if (dor == basd && pebd != "" && dor != pebd && comp != "active") {dor = pebd;}
+  
+  if (pebd != "" && (wks > 0 || yrs > 0)) {
+    var d = new Date(pebd);
+    d.setFullYear(d.getFullYear() + yrs);
+    d.setDate(d.getDate() + (wks * 7));
+    
+    var dd = d.getDate(); if (dd < 10) {dd = "0" + dd;}
+    var mm = d.getMonth() + 1; if (mm < 10) {mm = "0" + mm;}
+    var yy = d.getFullYear();
+    ets = yy + "-" + mm + "-" + dd;
+  
+  */
   
   var val = j.smDLI.toLowerCase();
   if (val == undefined || val == null || val == "" || val == "none" || val == "na" || val == "n/a" || val == "not attended") {j.smDLI = "No";}
